--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           java-version: 17
           distribution: temurin
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.7.0
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
         with:
