Add mongo prod config

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,15 @@
 version: '3.9'
 
 services:
+
+  api:
+    image: konvio/kotlin-agency-api
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mongo
+
   mongo:
-    image: mongo:latest
+    image: mongo
     ports:
       - "27017:27017"
