Simplify docker config

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,14 +2,21 @@ version: '3.9'
 
 services:
 
+  ui:
+    image: konvio/angular-agency-ui
+    ports:
+      - '4000:80'
+    depends_on:
+      - api
+
   api:
     image: konvio/kotlin-agency-api
     ports:
-      - "8080:8080"
+      - '8080:8080'
     depends_on:
       - mongo
 
   mongo:
     image: mongo
     ports:
-      - "27017:27017"
+      - '27017:27017'
